# FrecciaYoungFinder

./: README.md  pyproject.toml  start_telegram_bot.sh
cli/: main.py
scripts/: linters.sh
systemd/: frecciayoung-bot.service
telegram/: main.py
trenitalia/: exceptions.py
trenitalia/solutions/: api.py  models.py
trenitalia/stations/: api.py  models.py
trenitalia/utils/: api.py
