[tool.poetry]
name = "frecciayoungfinder"
version = "0.1.0"
description = "A tool to find FrecciaYoung tickets"
authors = ["Leonardo La Rocca <leo_la_rocca@yahoo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
